licenses(["notice"])

package(
    default_visibility = ["//visibility:public"],
)

# local sources
filegroup(
    name = "srcs",
    srcs = [
        "BUILD",
        "//proto:srcs",
        "//retroc:srcs",
        "//retrop:srcs",
    ],
)

filegroup(
    name = "credentials",
    srcs = [
        "certs/server.key",
        "certs/server.crt",
    ],
)
