licenses(["notice"])

package(
    default_visibility = ["//visibility:public"],
)

filegroup(
    name = "srcs",
    srcs = glob([
        "*.hpp",
        "src/*.cpp"
    ]) + [
        "BUILD",
        "headers",
    ],
)

######### LIBRARY #########

cc_library(
    name = "cpp_client",
    hdrs = ["client.hpp"],
    srcs = ["client.cpp"],
    copts = ["-std=c++14"],
    deps = ["@com_github_raggledodo_dora//proto:cc_proto"],
)
