licenses(["notice"])

package(
    default_visibility = ["//visibility:public"],
)

filegroup(
    name = "srcs",
    srcs = glob([
        "*.hpp",
        "src/*.cpp",
    ]) + [
        "BUILD",
        "headers",
    ],
)

######### LIBRARY #########

cc_library(
    name = "simple",
    hdrs = glob(["*.hpp"]),
    srcs = glob(["src/*.cpp"]),
    copts = ["-std=c++14"],
    deps = [
        "//anteroc:anteroc",
        "//retroc:retroc",
    ],
)

######### TEST #########

cc_test(
    name = "test_gen",
    size = "small",
    srcs = ["test/genmode.cpp"],
    deps = [
        "//simple:simple",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = 1,
    copts = ["-std=c++14"],
    data = ["//:credentials"],
)

cc_test(
    name = "test_genoffline",
    size = "small",
    srcs = ["test/genoffline.cpp"],
    deps = [
        "//simple:simple",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = 1,
    copts = ["-std=c++14"],
    data = ["//:credentials"],
)

cc_test(
    name = "test_read",
    size = "small",
    srcs = ["test/readmode.cpp"],
    deps = [
        "//simple:simple",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = 1,
    copts = ["-std=c++14"],
    data = ["//:credentials"],
)

cc_test(
    name = "test_readoffline",
    size = "small",
    srcs = ["test/readoffline.cpp"],
    deps = [
        "//simple:simple",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = 1,
    copts = ["-std=c++14"],
    data = ["//:credentials"],
)
